--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,127 @@
+altair==5.4.1
+annotated-types==0.7.0
+appnope==0.1.4
+asn1crypto==1.5.1
+asttokens==2.4.1
+attrs==24.2.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpickle==2.2.1
+comm==0.2.2
 contourpy==1.3.0
+cryptography==43.0.3
 cycler==0.12.1
+debugpy==1.8.7
+decorator==5.1.1
+entrypoints==0.4
+exceptiongroup==1.2.2
+executing==2.1.0
+Faker==30.8.2
+favicon==0.7.0
+filelock==3.16.1
 fonttools==4.55.3
+gitdb==4.0.11
+GitPython==3.1.43
+htbuilder==0.6.2
+idna==3.10
+importlib_metadata==8.5.0
 importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.18.1
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keyring==25.5.0
 kiwisolver==1.4.7
+loguru==0.7.2
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+markdownlit==0.0.7
+MarkupSafe==3.0.2
 matplotlib==3.9.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+more-itertools==10.5.0
+narwhals==1.13.2
+nest-asyncio==1.6.0
 numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+protobuf==5.26.1
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==14.0.2
+pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pymdown-extensions==10.12
+pyOpenSSL==24.2.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.12
 scipy==1.13.1
 seaborn==0.13.2
+semantic-model-generator @ file:///Users/yshao/amplify/semantic-model-generator
 six==1.17.0
+smmap==5.0.1
+snowflake-connector-python==3.12.3
+snowflake-snowpark-python==1.18.0
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlglot==25.10.0
+st-annotated-text==4.0.1
+stack-data==0.6.3
+streamlit==1.36.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.4.0
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.9
+streamlit-keyup==0.2.4
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
+strictyaml==1.7.3
+tenacity==8.5.0
+toml==0.10.2
+tomlkit==0.13.2
+tornado==6.4.1
+tqdm==4.67.0
+traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==1.26.20
+wcwidth==0.2.13
 zipp==3.21.0
